--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-navigacija></app-navigacija>
 <app-kreiranje-rezervacije (dodajPodatke)="dodajPodatke($event)"></app-kreiranje-rezervacije>
 <app-prikaz-rezervacije [podaci]="podaci"></app-prikaz-rezervacije>
+<app-o-nama></app-o-nama>
+<app-ponuda></app-ponuda>
+<app-preporuka></app-preporuka>
