--- a/src/app/kreiranje-rezervacije/kreiranje-rezervacije.component.html
+++ b/src/app/kreiranje-rezervacije/kreiranje-rezervacije.component.html
@@ -18,3 +18,4 @@
       <button type="button" class="btn btn-primary" (click)="dodajPodatak()">Dodaj</button>
     </form>
   </div>
+  <app-prikaz-rezervacije></app-prikaz-rezervacije>
