--- a/src/app/navigacija/navigacija.component.html
+++ b/src/app/navigacija/navigacija.component.html
@@ -1,1 +1,30 @@
-<H1>MET HOTELS</H1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="pocetna">Pocetna</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="o-nama">O nama</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="ponuda">Ponuda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="di">DI</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="rezervacija">Rezervacija sobe</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="sobe">Pregled soba</a>
+          </li>
+      </ul>
+    </div>
+  </nav>
+
+  <router-outlet></router-outlet>
